The library name in composer.json was updated.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "edoBarnas/skidata-dta",
+  "name": "edobarnas/skidata",
   "description": "",
   "type": "library",
   "license": "MIT",
