The VarDumper library is now only available in the development environment.

--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,13 @@
     "ext-curl": "*",
     "nette/utils": "2.5.*",
     "guzzlehttp/guzzle": "6.3.*",
-    "vlucas/pikirasa": "1.0.*",
-    "symfony/var-dumper": "4.2.*"
+    "vlucas/pikirasa": "1.0.*"
   },
   "require-dev": {
     "phpstan/phpstan": "0.11.*",
     "phpstan/phpstan-phpunit": "0.11.*",
     "phpunit/phpunit": "8.0.*",
+    "symfony/var-dumper": "4.2.*",
     "symplify/easy-coding-standard": "5.4.*"
   },
   "autoload": {
